Request button added and relationship status can be shown in search